@@ -28,7 +28,7 @@ public final class RabbitMQMessageHandler extends AbstractMessageHandler {
         channel.queueDeclare(rabbitChannel, false, false, false, null);
         channel.basicConsume(rabbitChannel, true, (s, delivery) -> {
             String data = new String(delivery.getBody(), StandardCharsets.UTF_8);
-            String decodedData = URLDecoder.decode(data, StandardCharsets.UTF_8);
+            String decodedData = URLDecoder.decode(data, "UTF-8");
             parseData(decodedData);
         }, ignored -> {
         });
