@@ -5,6 +5,7 @@ import org.jetbrains.annotations.NotNull;
 import org.selyu.messaging.AbstractPublisher;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.CompletableFuture;
@@ -22,7 +23,12 @@ final class RabbitMQPublisher extends AbstractPublisher {
     @Override
     public CompletableFuture<Void> postData(@NotNull String data) {
         return CompletableFuture.runAsync(() -> {
-            String encodedData = URLEncoder.encode(data, StandardCharsets.UTF_8);
+            String encodedData = null;
+            try {
+                encodedData = URLEncoder.encode(data, "UTF-8");
+            } catch (UnsupportedEncodingException e) {
+                e.printStackTrace();
+            }
             try {
                 channel.basicPublish("", messageHandler.rabbitChannel, null, encodedData.getBytes());
             } catch (IOException e) {
